// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`golden: generateSession output is pinned Quick Session, upper, seed 4 1`] = `
{
  "anchorsSnapshot": [
    "none",
    "stance",
    "feet",
    "self-low",
    "thigh-loop",
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
  ],
  "cooldown": [
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-shoulder-distraction",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "effort": "normal",
  "engineVersion": "2.7.0",
  "estimatedMinutes": 8,
  "explanation": "Runs about 8 min instead of your 7 min target — couldn't trim further without dropping a required exercise.",
  "focus": "upper",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 105,
      "exerciseId": "standing-chest-press",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 105,
      "exerciseId": "pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 105,
      "exerciseId": "overhead-press",
      "pattern": "vertical_push",
      "progressionFamilyId": "vertical_push",
      "progressionLevelIdAtTime": "vertical_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 7,
  "timeBudgetDeviation": {
    "direction": "over",
    "estimatedMinutes": 8,
    "reason": "structural_minimum",
    "targetMinutes": 7,
  },
  "warmup": [
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-shoulder-passthrough",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned abs, 30min, normal — never all-flexion, seed 5 1`] = `
{
  "anchorsSnapshot": [
    "none",
    "stance",
    "feet",
    "self-low",
    "thigh-loop",
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-hip-flexor",
      "pattern": "lunge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-thoracic-rotation",
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "effort": "normal",
  "engineVersion": "2.7.0",
  "estimatedMinutes": 32,
  "explanation": "Balanced to keep working anti-rotation core work without repeating what you just did.",
  "focus": "abs",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 480,
      "exerciseId": "suitcase-hold",
      "notes": undefined,
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 273,
      "exerciseId": "bw-heel-tap",
      "notes": undefined,
      "pattern": "flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 255,
      "exerciseId": "dead-bug",
      "pattern": "anti_extension",
      "progressionFamilyId": "anti_extension",
      "progressionLevelIdAtTime": "anti_extension.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 381,
      "exerciseId": "side-bend",
      "notes": undefined,
      "pattern": "lateral_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 147,
      "exerciseId": "half-kneeling-pallof",
      "notes": undefined,
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 1,
      "tempoSec": 3,
      "unilateral": true,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 30,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-deadbug-bw",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-shoulder-passthrough",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-glute-bridge",
      "pattern": "hinge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned cold-start legs, 20min, easy, seed 2 1`] = `
{
  "anchorsSnapshot": [
    "none",
    "stance",
    "feet",
    "self-low",
    "thigh-loop",
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-hip-flexor",
      "pattern": "lunge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-calf-stretch",
      "pattern": "calf",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "effort": "easy",
  "engineVersion": "2.7.0",
  "estimatedMinutes": 20,
  "explanation": "Your first few sessions set your starting levels — push a little and it'll calibrate fast.",
  "focus": "legs",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "easy",
      "estimatedSec": 255,
      "exerciseId": "bw-squat",
      "pattern": "squat",
      "progressionFamilyId": "squat",
      "progressionLevelIdAtTime": "squat.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "easy",
      "estimatedSec": 255,
      "exerciseId": "bw-good-morning",
      "pattern": "hinge",
      "progressionFamilyId": "hinge",
      "progressionLevelIdAtTime": "hinge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "easy",
      "estimatedSec": 345,
      "exerciseId": "bw-reverse-lunge",
      "pattern": "lunge",
      "progressionFamilyId": "lunge",
      "progressionLevelIdAtTime": "lunge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": true,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 20,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-glute-bridge",
      "pattern": "hinge",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-shoulder-passthrough",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned cold-start upper, 30min, normal, seed 1 1`] = `
{
  "anchorsSnapshot": [
    "none",
    "stance",
    "feet",
    "self-low",
    "thigh-loop",
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-thoracic-rotation",
      "pattern": "anti_rotation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-lat-side-bend",
      "pattern": "lateral_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "effort": "normal",
  "engineVersion": "2.7.0",
  "estimatedMinutes": 32,
  "explanation": "Your first few sessions set your starting levels — push a little and it'll calibrate fast.",
  "focus": "upper",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 255,
      "exerciseId": "bw-wall-push-up",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 255,
      "exerciseId": "pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 255,
      "exerciseId": "overhead-press",
      "pattern": "vertical_push",
      "progressionFamilyId": "vertical_push",
      "progressionLevelIdAtTime": "vertical_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "durationSec": 20,
      "effort": "normal",
      "estimatedSec": 225,
      "exerciseId": "banded-lat-pull-hold",
      "pattern": "vertical_pull",
      "progressionFamilyId": "vertical_pull",
      "progressionLevelIdAtTime": "vertical_pull.l1",
      "repTarget": undefined,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 273,
      "exerciseId": "reverse-curl",
      "notes": undefined,
      "pattern": "elbow_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 273,
      "exerciseId": "tricep-pushdown",
      "notes": undefined,
      "pattern": "elbow_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "tempoSec": 3,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 30,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-shoulder-passthrough",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-scap-push-up",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;

exports[`golden: generateSession output is pinned mid-progression full, 45min, hard (with a finisher slot), seed 3 1`] = `
{
  "anchorsSnapshot": [
    "none",
    "stance",
    "feet",
    "self-low",
    "thigh-loop",
    "anchor-low",
    "anchor-mid",
    "anchor-high",
    "low-bar",
  ],
  "cooldown": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 60,
      "exerciseId": "cd-childs-pose",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 60,
      "exerciseId": "cd-chest-stretch",
      "pattern": "horizontal_push",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": 30,
      "effort": "normal",
      "estimatedSec": 90,
      "exerciseId": "cd-lat-side-bend",
      "pattern": "lateral_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 0,
      "role": "cooldown",
      "sets": 1,
      "tempoSec": 0,
      "unilateral": true,
    },
  ],
  "effort": "hard",
  "engineVersion": "2.7.0",
  "estimatedMinutes": 47,
  "explanation": "Balanced to keep working squatting without repeating what you just did.",
  "focus": "full",
  "format": "straight_sets",
  "generatedAtLocalDate": "2026-08-30",
  "main": [
    {
      "anchorClass": "band_tension",
      "band": "B3",
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 255,
      "exerciseId": "banded-squat",
      "pattern": "squat",
      "progressionFamilyId": "squat",
      "progressionLevelIdAtTime": "squat.l4",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 345,
      "exerciseId": "glute-kickback",
      "pattern": "hinge",
      "progressionFamilyId": "hinge",
      "progressionLevelIdAtTime": "hinge.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": true,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 255,
      "exerciseId": "bw-wall-push-up",
      "pattern": "horizontal_push",
      "progressionFamilyId": "horizontal_push",
      "progressionLevelIdAtTime": "horizontal_push.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 255,
      "exerciseId": "overhead-pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": "horizontal_pull",
      "progressionLevelIdAtTime": "horizontal_pull.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 255,
      "exerciseId": "bw-superman",
      "pattern": "anti_extension",
      "progressionFamilyId": "anti_extension",
      "progressionLevelIdAtTime": "anti_extension.l1",
      "repTarget": 10,
      "restSec": 45,
      "role": "main",
      "sets": 3,
      "substitutedFor": undefined,
      "tempoSec": 3,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 342,
      "exerciseId": "bw-reverse-crunch",
      "notes": "AMRAP",
      "pattern": "flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": undefined,
      "restSec": 30,
      "role": "main",
      "sets": 4,
      "tempoSec": 4,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B1",
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 342,
      "exerciseId": "reverse-curl",
      "notes": undefined,
      "pattern": "elbow_flexion",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 30,
      "role": "main",
      "sets": 4,
      "tempoSec": 4,
      "unilateral": false,
    },
    {
      "anchorClass": "band_tension",
      "band": "B2",
      "durationSec": undefined,
      "effort": "hard",
      "estimatedSec": 342,
      "exerciseId": "tricep-pushdown",
      "notes": undefined,
      "pattern": "elbow_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 30,
      "role": "main",
      "sets": 4,
      "tempoSec": 4,
      "unilateral": false,
    },
  ],
  "patternGaps": [],
  "targetMinutes": 45,
  "timeBudgetDeviation": undefined,
  "warmup": [
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-cat-cow",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-deadbug-bw",
      "pattern": "anti_extension",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": "B1",
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-pull-apart",
      "pattern": "horizontal_pull",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
    {
      "anchorClass": "none",
      "band": null,
      "durationSec": undefined,
      "effort": "normal",
      "estimatedSec": 54,
      "exerciseId": "wu-scap-push-up",
      "pattern": "shoulder_isolation",
      "progressionFamilyId": null,
      "progressionLevelIdAtTime": null,
      "repTarget": 12,
      "restSec": 0,
      "role": "warmup",
      "sets": 1,
      "tempoSec": 2,
      "unilateral": false,
    },
  ],
}
`;
